fixed min height of page on mobile

--- a/packages/frontend/src/app/app.component.scss
+++ b/packages/frontend/src/app/app.component.scss
@@ -102,7 +102,6 @@ footer {
   }
 
   .page {
-    min-height: unset;
     max-height: unset;
     overflow-y: unset;
   }
